# ApexRobot_Sim

./: .gitignore  README.md
devel/: .catkin  local_setup.sh
devel/lib/pkgconfig/: Apex_examples.pc  apex_controller.pc  apex_description.pc
devel/lib/python3/dist-packages/apex_controller/: __init__.py
devel/share/Apex_examples/cmake/: Apex_examplesConfig.cmake
devel/share/apex_controller/cmake/: apex_controllerConfig.cmake
devel/share/apex_description/cmake/: apex_descriptionConfig.cmake
src/Apex_examples/: CMakeLists.txt  package.xml
src/apex_controller/: CMakeLists.txt  package.xml  setup.py
src/apex_controller/launch/: controller.launch
src/apex_controller/nodes/: apex_controller_node.py
src/apex_controller/src/apex_controller/: inverse_kinematics.py  locomotion_controller.py
src/apex_description/: CMakeLists.txt
src/apex_description/launch/: display.launch  gazebo.launch
src/apex_description/rviz/: apex_rviz.rviz
src/apex_description/urdf/: quad_robo.urdf  quad_robo.urdf.xacro  quad_robo_std.urdf.xacro  quadruped.urdf
